Bugfix: centred cardfocus on mobile devices

--- a/src/760.css
+++ b/src/760.css
@@ -20,6 +20,11 @@
     }
   }
   
+  .cardfocus {
+    top: 25px;
+    height: 80vw;
+  }
+
   #centerlogo {
     height: 50px;
   }
